styles/styles.css
/* ... */
/* medium heading */
@font-face {
    font-family: gotham-fallback-heading;
    font-style: normal;
    font-weight: var(--font-weight-bold);
    src: local('Arial');
    ascent-override: 69.48%;
    descent-override: 17.37%;
    line-gap-override: 17.37%;
    size-adjust: 95%;
}

@media (min-width: 300px) {
    :root {
        --nav-height: 153px;
    }
}

@media (min-width: 600px) {
    :root {
        --nav-height: 143px;
    }
}

@media (min-width: 900px) {
    :root {
        --heading-font-size-xxl-home: 5rem;
        --heading-font-size-xxl: 4.5rem;
        --heading-font-size-xl: 4.5rem;
        --heading-font-size-l: 2.2rem;
        --heading-font-size-m: 1.7rem;
        --heading-font-size-s: 1.6rem;
        --heading-font-size-xs: 1.6rem;
        --nav-height: 172px;
    }
}

html {
    /* sets root font size to 10px to simplify calculations
       and improve readability */

    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    font-size: var(--body-font-size-m);
    margin: 0;
    font-family: var(--body-font-family);
    line-height: 1.1;
    color: var(--text-color);
    background-color: var(--background-color);
    display: none;
}

body.appear {
    display: block;
}

main {
    margin-top: 12px;
    overflow-x: hidden;
}

@media (min-width: 900px) {
    main {
        margin-top: 0;
    }
}

header {
    height: var(--nav-height);
}

h1, h2, h3,
h4, h5, h6 {
    font-family: var(--heading-font-family);
    font-weight: var(--font-weight-regular);
    line-height: 1.25;
    margin-top: 1em;
    margin-bottom: .5em;
    scroll-margin: 38px;
    color: var(--link-color);
}

h1 {
    font-size: var(--heading-font-size-xxl)
}

h2 {
    font-size: var(--heading-font-size-xl)
}

h3 {
    font-size: var(--heading-font-size-l)
}

h4 {
    font-size: var(--heading-font-size-m)
}

h5 {
    font-size: var(--heading-font-size-s)
}

h6 {
    font-size: var(--heading-font-size-xs)
}

p, dl, ol, ul, pre, blockquote {
    margin-top: 12px;
    margin-bottom: 12px;
}

p {
    line-height: 1.2;
}

ul {
    padding-inline-start: 13px;
}

hr {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    border: 0;
    border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
    font-family: var(--fixed-font-family);
    font-size: var(--body-font-size-s);
}

code, samp {
    padding: .125em;
}

pre {
    overflow: scroll;
}

strong {
    font-weight: 500;
}

main pre {
    background-color: var(--overlay-background-color);
    padding: 1em;
    border-radius: .25em;
    overflow-x: auto;
    white-space: pre;
}

main img {
    max-width: 100%;
}

.columns-row img,
.default-content-wrapper img {
    transform: scale(0.8);
}

@media (min-width: 900px) {
    .columns-row img,
    .default-content-wrapper img {
        transform: scale(1);
    }
}

/* buttons */
a:not(.button):any-link {
    display: inline-block;
    color: var(--link-color);
    text-decoration: none;
    font-weight: var(--link-font-weight);
}

a:not(.button):hover {
    text-decoration: none;
    color: var(--link-hover-color);
    font-weight: var(--link-font-weight-hover);
}

.copd-resources main .button-container a {
    border: 0;
    font-size: var(--body-font-size-s);
    text-transform: none;
    padding: 10px 39px 10px 25px;
}

.copd-treatment .columns .button-container {
    border-top: 1px solid var(--color-grey-5);
    position: absolute;
    bottom: 45px;
    left: 0;
    right: 0;
    margin: 0 12px;
    padding-top: 30px;
    padding-right: 100px;
}

@media (min-width: 900px) {
    .copd-resources main .button-container a {
        margin: 0 auto;
    }

    .copd-treatment .columns .button-container {
        padding-right: unset;
        padding-bottom: 30px;
    }
}

.copd-treatment .columns .button-container a {
    display: unset;
    margin: unset;
    font-weight: 500;
    padding: 0;
    border-radius: unset;
    font-size: var(--body-font-size-s);
    line-height: 16px;
    text-transform: unset;
}

.copd-treatment .columns .button-container a::after {
    content: '';
    width: 20px;
    height: 20px;
    background: url('/icons/icon_pink-arrow-right-md.png') no-repeat;
    background-size: contain;
    display: inline-block;
    position: relative;
}

a.button:any-link, button {
    text-decoration: none;
    display: flex;
    width: fit-content;
    color: var(--cta-color);
    border: 2px solid var(--cta-color);
    align-items: center;
    vertical-align: center;
    font-family: var(--body-font-family);
    text-transform: uppercase;
    font-size: 1.2rem;
    line-height: 1.2rem;
    font-weight: var(--font-weight-bold);
    border-radius: 26px;
    padding: 0 20px;
    height: 30px;
    margin-top: 14px;
}

a.button:any-link::after, button::after {
    content: "";
    width: 17px;
    height: 17px;
    background-size: cover;
    background-image: url('../icons/icon_pink-arrow-right-md.png');
    background-repeat: no-repeat;
    margin-left: 8px;
    transform: translateY(-2px);
}

a.button:hover, a.button:focus, button:hover, button:focus {
    cursor: pointer;
}

.taking-bevespi-aerosphere a.button:any-link {
    font-size: 1.1rem;
}

@media(min-width: 900px) {
    .taking-bevespi-aerosphere a.button:any-link {
        font-size: 1.7rem;
    }
}

button:disabled, button:disabled:hover {
    background-color: var(--overlay-background-color);
    cursor: unset;
}

a.button.secondary, button.secondary {
    background-color: unset;
    border: 0;
    color: var(--cta-color);
    justify-content: space-between;
    position: relative;
    text-transform: unset;
    font-weight: 400;
    font-style: normal;
}

a.button.secondary:any-link {
    padding: 0;
}
/* ... */

